[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "topic-discovery"
version = "0.1.0"
description = "Topic vocabulary discovery via WordNet graph expansion and embedding similarity"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "hdbscan>=0.8.33",
    "nltk>=3.8",
]

[project.urls]
Repository = "https://github.com/tabb-alex/topic-discovery"

[tool.setuptools]
py-modules = ["topic_builder"]
